# zipper_rust

./: Cargo.toml  Dockerfile  Makefile  README.MD
config/: log4rs.yml
src/: main.rs
src/models/: form_data.rs
src/service/: mod.rs  rest.rs  utils.rs
templates/: index.html
