[package]
name = "zipper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "stream", "json"] }
indicatif = "0.16"
zip = "0.6"
tokio-util = { version = "0.6", features = ["io"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3.30"
futures-util = "0.3.31"
log = "0.4.22"
log4rs = "1.3.0"
tera = "1.20.0"
sanitize-filename = "0.5.0"
url = "2.5.2"


[profile.release]
strip = true        # Automatically strip symbols from the binary.
opt-level = "z"     # Optimize for size.
lto = true          # Use Link Time Optimization.
codegen-units = 1   # Compile the whole crate at once.
debug = false       # Strip debug symbols from the binary.

[profile.dev]
debug = true
